# computerenhance

./: .gitignore  CMakeLists.txt  README.md
prebuilts/llama-cpp/: CMakeLists.txt
prebuilts/sherpa-onnx/: CMakeLists.txt
src/: CMakeLists.txt  Main.qml  MainWindow.qml  llama_llava_phi.cpp  llama_llava_phi.h  main.cpp  qt_imageworker.cpp  qt_imageworker.h  qt_mainwindow.cpp  qt_mainwindow.h  tts_sherpa_onnx.cpp  tts_sherpa_onnx.h
